# R_Oracle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_SETUP.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  TESTING.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
chain-specs/: .gitkeep
docs/: ARCHITECTURE.md  RESILIENCE.md  SEQUENCE.md
frontend/: .gitignore  jest.config.js  jest.setup.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/components/: Dashboard.tsx  HistoryChart.tsx  SubmitButton.tsx
frontend/src/components/__tests__/: Dashboard.test.tsx  HistoryChart.test.tsx  SubmitButton.test.tsx
frontend/src/lib/: api.ts  oracle.ts  pallet.ts  types.ts
frontend/src/lib/__tests__/: api.test.ts  oracle.test.ts  pallet.test.ts
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
pallets/roracle/: Cargo.toml
pallets/roracle/src/: lib.rs  tests.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: build-chain-spec.sh  build.sh  github-init.sh  test.sh
