[package]
name = "r-oracle-node"
version = "4.0.0"
description = "R-Oracle: Resilient Multi-Source Oracle Chain Node"
authors = ["R-Oracle Team"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/LightLLM/R_Oracle"

[[bin]]
name = "r-oracle-node"
path = "src/main.rs"

[features]
default = ["runtime-benchmarks"]
runtime-benchmarks = [
    "r-oracle-runtime/runtime-benchmarks",
    "cumulus-pallet-parachain-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collator-selection/runtime-benchmarks",
    "pallet-session/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-transaction-payment/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-roracle/runtime-benchmarks",
]
try-runtime = [
    "r-oracle-runtime/try-runtime",
    "try-runtime-cli",
]

[dependencies]
r-oracle-runtime = { path = "../runtime", default-features = false }

# Substrate
sc-cli = { version = "4.0.0", default-features = false }
sc-client-api = { version = "4.0.0", default-features = false }
sc-client-db = { version = "4.0.0", default-features = false }
sc-consensus-aura = { version = "4.0.0", default-features = false }
sc-executor = { version = "4.0.0", default-features = false }
sc-network = { version = "4.0.0", default-features = false }
sc-service = { version = "4.0.0", default-features = false }
sc-transaction-pool = { version = "4.0.0", default-features = false }
sc-consensus = { version = "4.0.0", default-features = false }
sc-keystore = { version = "4.0.0", default-features = false }
sc-sync-state-rpc = { version = "4.0.0", default-features = false }
substrate-frame-rpc-system = { version = "4.0.0", default-features = false }
clap = { version = "4.0", features = ["derive"] }
sc-chain-spec = { version = "4.0.0", default-features = false }

# Polkadot
cumulus-client-cli = { version = "1.0.0", default-features = false }
cumulus-client-collator = { version = "1.0.0", default-features = false }
cumulus-client-consensus-aura = { version = "1.0.0", default-features = false }
cumulus-client-consensus-common = { version = "1.0.0", default-features = false }
cumulus-client-network = { version = "1.0.0", default-features = false }
cumulus-client-parachain-consensus = { version = "1.0.0", default-features = false }
cumulus-client-relay-chain-inprocess-interface = { version = "1.0.0", default-features = false }
cumulus-primitives-core = { version = "1.0.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "1.0.0", default-features = false }
polkadot-client-service = { version = "1.0.0", default-features = false }
polkadot-cli = { version = "1.0.0", default-features = false }
polkadot-service = { version = "1.0.0", default-features = false }

# Frontier
fp-rpc = { version = "1.0.0", default-features = false }

# Standard
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", default-features = false }

