[package]
name = "pallet-roracle"
version = "4.0.0"
description = "Resilient Multi-Source Oracle Chain Pallet"
authors = ["R-Oracle Team"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/LightLLM/R_Oracle"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "4.0.0", default-features = false, optional = true }
frame-support = { version = "4.0.0", default-features = false }
frame-system = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }
sp-core = { version = "4.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "4.0.0", default-features = false }
sp-io = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
frame-benchmarking = { version = "4.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

